# skb

client/: CMakeLists.txt  animations.cpp  animations.h  aspectratiowidget.cpp  aspectratiowidget.h  crosshairitem.cpp  crosshairitem.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  network.cpp  network.h  scaledsvgitem.cpp  scaledsvgitem.h  svgcrosshair.cpp  svgcrosshair.h
client/svg/: svg.qrc
server/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  network.cpp  network.h  realslider.cpp  realslider.h
